[23906] IContactSearchFilterQueryAdapter search by date and patnr